Don't try to delete the generated GIF; use getFirst() instead of get(0)